# fallout4-backported-archive2-support

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserEnvVars.json  Make-Release.ps1  README.md  vcpkg.json
resources/: GenerateHeaderFromBinary.ps1  MainMenu.swf
source/: CMakeLists.txt  DllMain.cpp  PCH.h  Plugin.cpp
source/Impl/: BSImagespaceShaderCopyShadowMapToArray.h  ShaderPackageStream.cpp  ShaderPackageStream.h
source/RE/: Shims.h
vcpkg-ports/commonlibf4/: portfile.cmake  vcpkg.json
